# lidar_pcd_simulation

./: CMakeLists.txt  README.md  package.xml
config/: lidar_params.yaml
launch/: gpu_lidar_bridge.launch.py  spawn_boxes.launch.py
models/container/: model.config  model.sdf
models/pallet_10/: model.config
models/pallet_100/: model.config  model.sdf
models/pallet_50/: model.config
models/pallet_90/: model.config
rviz/: rviz.rviz
src/: main.cpp  pcl_saver.cpp
urdf/: box.xacro  boxes.xacro  container.xacro  my_lidar.urdf.xacro
worlds/: lidar_world.sdf  lidar_world.sdf.xacro  lidar_world.world  new_world.world
