<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lidar_pcd_simulator</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="richard9661h@gmail.com">gepoc</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend> rclcpp </depend>
  <depend> pcl </depend>
  <depend> sensor_msgs </depend>
  <depend> pcl_conversions </depend>
  <depend>std_srvs</depend>

  <export>
    <build_type>ament_cmake</build_type>

    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <!-- <gazebo_ros gazebo_media_path="${prefix}/media"/>
    <gazebo_ros plugin_path="${prefix}/plugins"/> -->
   
  </export>
</package>
